# Circulaire-Skid-Bouw-applicatie

./: .env.example  .gitignore  README.md  README_PATCH.txt  app.py  pyproject.toml  requirements.txt
data/: app.db
data/source/: input app.csv  input app.xlsx  input appv2.csv  input appv2.xlsx
src/lbk_prefab_app/: __init__.py  config.py  constants.py  database.py  logging_config.py  schemas.py
src/lbk_prefab_app/models/: db_models.py
src/lbk_prefab_app/services/: calculation_service.py  component_service.py  import_service.py  report_service.py
src/lbk_prefab_app/ui/: configurator.py  layout.py  styles.py
tests/: test_calculation_service.py  test_import_service.py  test_visual_mapping.py
