[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lbk-prefab-app"
version = "0.1.0"
description = "Streamlit-webapp voor prefab LBK-set calculatie, CO2 en materialenpaspoort."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "streamlit>=1.37.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
testpaths = [
  "tests",
]
